add a cache measure for enquete.js

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -7,4 +7,5 @@
       </div>
     </div>
 </aside>
-<script src="{{ "javascripts/enquete.js" | relURL }}"></script>
+{{- $buildnum := (now.Format "2006010203") }}
+<script src="{{ printf "%s?%s" "javascripts/enquete.js" $buildnum | relURL }}"></script>
