トップのレイアウトを変更

--- a/static/stylesheets/custom_mw.css
+++ b/static/stylesheets/custom_mw.css
@@ -108,3 +108,10 @@ a,
         width: 23%;
     }
 }
+
+/* 1059px以上の設定  *************************************************************/
+@media only screen and (min-width:1059px) {
+    .col-tile-gr {
+        width: 18%;
+    }
+}
