--- a/layouts/shortcodes/subnavi.html
+++ b/layouts/shortcodes/subnavi.html
@@ -1,8 +1,8 @@
 <nav class="subnavi">
   <aside>
     <div class="subnavimsg">{{ .Get "msg"}}</div>
-    <div>
-      <a href="{{ .Get "url" }}" target="_blank" class="btn-mail">
+    <div class="subnavibtn">
+      <a href="{{ .Get "url" }}" target="_blank" class="subnavianc">
       <i class="far fa-envelope" aria-hidden="true"></i>
         <h4>{{ .Get "inquiry"}}</h4>
       </a>
