--- a/static/stylesheets/search_result.css
+++ b/static/stylesheets/search_result.css
@@ -31,7 +31,7 @@ body { overflow-y: scroll; }
     width: 100%
 }
 .article h1 {
-    font-size: 2em;
+    font-size: 1.8em;
 }
 .article .wrapper {
     padding-right: 0;
@@ -70,12 +70,12 @@ body { overflow-y: scroll; }
     display: block;
     font-size: 40px;
     padding-bottom: 17px;
-    color: #000;
+    color: #0d89a2;
 }
 .fa-envelope {
     display: block;
     font-size: 40px;
-    color: #5a5a5a;
+    color: #0d89a2;
 }
 
 .subnavi2-title {
@@ -105,8 +105,8 @@ body { overflow-y: scroll; }
 
 .search-button {
     cursor: pointer;
-    height: 48px;
-    width: 42px;
+    height: 58px;
+    width: 52px;
     padding-top: 2px;
     margin-left: -7px;
     background-color: #666;
@@ -134,7 +134,7 @@ body { overflow-y: scroll; }
 .search-words {
     font-size: 1.2em;
     width: 346px;
-    height: 46px;
+    height: 56px;
     margin-left: 5px;
     border: solid 2px #666;
     border-radius: 6px 0 0 6px;
@@ -191,7 +191,7 @@ body { overflow-y: scroll; }
 
 .item-total {
     font-size: .8em;
-    padding: 0px 4px 10px 4px;
+    padding: 10px 4px 10px 4px;
     margin: 0px 0 10px 0;
     color: #676767;
 }
