--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -266,7 +266,7 @@
 
                 <!-- body -->
                 {{- $title := partial "title" . -}}
-                {{- template "contentbody" (dict "sectList" $sectList "sectStr" $sectStr "content" .Content "product" $parent.Site.Params.product "serviceType" $parent.Site.Params.service_type_id "weight" $parent.Params.weight "ancid" .RelPermalink "title" $title) }}
+                {{- template "contentbody" (dict "sectList" $sectList "sectStr" $sectStr "content" .Content "product" $parent.Site.Params.product "serviceType" $parent.Site.Params.service_type_id "weight" $parent.Params.weight "ancid" .RelPermalink "title" $title "lang" .Language) }}
                 
                 <!-- add a sub section （go down the section tree） -->
                 {{- $sectList = $sectList | append 1 -}}
@@ -303,7 +303,7 @@
 
                 <!-- body -->
                 {{- $title := partial "title" . -}}
-                {{- template "contentbody" (dict "sectList" $sectList "sectStr" $sectStr "content" .Content "product" $parent.Site.Params.product "serviceType" $parent.Site.Params.service_type_id "weight" $parent.Params.weight "ancid" .RelPermalink "title" $title) }}
+                {{- template "contentbody" (dict "sectList" $sectList "sectStr" $sectStr "content" .Content "product" $parent.Site.Params.product "serviceType" $parent.Site.Params.service_type_id "weight" $parent.Params.weight "ancid" .RelPermalink "title" $title "lang" .Language) }}
         
                 <!-- increment the section number -->
                 {{- template "nextsection" $parent -}}
@@ -322,23 +322,25 @@
     {{- $title := .title -}}
     {{- $weight := .weight -}}
     {{- $ancid := .ancid -}}
+    {{- $lang := .lang -}}
     
+    {{- if and (ne $sectStr "") (ne $cont "") -}}
     <div class="article">
         <div class="wrapper">
           
-    <!-- in case of the section string is empty, the title is not displayed -->
-    {{- if ne $sectStr "" -}}
-        {{- $class := "content-title" -}}
-        {{- $chapter := "" -}}
-        {{- if eq (len $sectList) 1 -}}
-            <!-- At the top level section, add class of 'chapter'. -->
-            {{- $chapter = "chapter" -}}
-            {{- $class = "section-title" -}}
-        {{- end -}}
+        <!-- in case of the section string is empty, the title is not displayed -->
+        {{- if ne $sectStr "" -}}
+            {{- $class := "content-title" -}}
+            {{- $chapter := "" -}}
+            {{- if eq (len $sectList) 1 -}}
+                <!-- At the top level section, add class of 'chapter'. -->
+                {{- $chapter = "chapter" -}}
+                {{- $class = "section-title" -}}
+            {{- end -}}
                 <h1 class="{{ $class }} {{ $chapter }} bm-{{ (len $sectList) }}" id="{{- anchorize $ancid -}}">{{- $sectStr -}}&nbsp;{{- $title -}}</h1>
-    {{- end -}}
-                
-    {{- if ne $cont "" }}
+        {{- end -}}
+                    
+        {{- if ne $cont "" }}
                 <div class="content-body">          
                     <!-- make a collection of A tag -->
                     {{- $links := findRE "<a +href=\"[\\w!\\?/\\+\\-_~=;\\.,\\*&@#\\$%\\(\\)'\\[\\]]*\" *(target=\"_blank\")*>" $cont -}}
@@ -348,21 +350,21 @@
                     <!-- Identify the URL to convert -->
                     {{- if eq $product "kintone" -}}
                         {{- if eq $weight 100 -}}
-                            {{- $targeturl = (printf "/k/%s/user" .Language) -}}
+                            {{- $targeturl = (printf "/k/%s/user" $lang) -}}
                         {{- else if eq $weight 200 -}}
-                            {{- $targeturl = (printf "/k/%s/admin" .Language) -}}
+                            {{- $targeturl = (printf "/k/%s/admin" $lang) -}}
                         {{- else if eq $weight 300 -}}
-                            {{- $targeturl = (printf "/k/%s/utility" .Language) -}}
+                            {{- $targeturl = (printf "/k/%s/utility" $lang) -}}
                         {{- else if eq $weight 400 -}}
-                            {{- $targeturl = (printf "/k/%s/trouble_shooting" .Language) -}}
+                            {{- $targeturl = (printf "/k/%s/trouble_shooting" $lang) -}}
                         {{- end -}}
                     {{- else if eq $product "slash" -}}
                         {{- if eq $weight 100 -}}
-                            {{- $targeturl = (printf "/general/%s/admin" .Language) -}}
+                            {{- $targeturl = (printf "/general/%s/admin" $lang) -}}
                         {{- else if eq $weight 200 -}}
-                            {{- $targeturl = (printf "/general/%s/user" .Language) -}}
+                            {{- $targeturl = (printf "/general/%s/user" $lang) -}}
                         {{- else if eq $weight 300 -}}
-                            {{- $targeturl = (printf "/general/%s/login" .Language) -}}
+                            {{- $targeturl = (printf "/general/%s/login" $lang) -}}
                         {{- end -}}
                     {{- else if eq $product "Garoon" -}}
                         {{- $prod := "g" }}
@@ -370,9 +372,9 @@
                             {{- $prod = "g5" }}
                         {{- end }}
                         {{- if eq $weight 200 -}}
-                            {{- $targeturl = (printf "/%s/%s/admin" $prod .Language) -}}
+                            {{- $targeturl = (printf "/%s/%s/admin" $prod $lang) -}}
                         {{- else if eq $weight 300 -}}
-                            {{- $targeturl = (printf "/%s/%s/user" $prod .Language) -}}
+                            {{- $targeturl = (printf "/%s/%s/user" $prod $lang) -}}
                         {{- end -}}
                     {{- else if eq $product "Mailwise" -}}
                         {{- $prod := "m" }}
@@ -380,9 +382,9 @@
                             {{- $prod = "mw5" }}
                         {{- end }}
                         {{- if eq $weight 200 -}}
-                            {{- $targeturl = (printf "/%s/%s/admin" $prod .Language) -}}
+                            {{- $targeturl = (printf "/%s/%s/admin" $prod $lang) -}}
                         {{- else if eq $weight 300 -}}
-                            {{- $targeturl = (printf "/%s/%s/user" $prod .Language) -}}
+                            {{- $targeturl = (printf "/%s/%s/user" $prod $lang) -}}
                         {{- end -}}
                     {{- end -}}
 
@@ -426,8 +428,9 @@
 
                     {{- $cont | safeHTML -}}
                 </div><!-- close content-body -->  
-    {{- end -}}
+        {{- end -}}
     
         </div><!-- close wrapper -->
     </div><!-- close article -->
+    {{- end -}}
 {{- end -}}
