--- a/layouts/partials/meganav.html
+++ b/layouts/partials/meganav.html
@@ -14,7 +14,7 @@
 {{- $seconditems := len $rootsect.Pages }}
 {{- if .IsHome}}
   {{- $seconditems = 0 }}
-{{- else if or (in $rootsect "purpose") (in $rootsect "pdf")}}
+{{- else if or (in $rootsect "purpose") (in $rootsect "pdf") (in $rootsect "glossary")}}
   {{- $seconditems = 0 }}
 {{- else if or (eq $.Params.type "search_result") (eq $.Params.type "gr/sitemap")}}
   {{- $seconditems = 0 }}
